recipes item added

--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,40 +8,51 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- Your existing header layout -->
-        <ImageView
+        <!-- Replace the ImageView with a View element -->
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/header_bg"
-            android:scaleType="centerCrop"/>
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:background="#607274" />
+
+        <ImageView
+            android:id="@+id/btnFilter"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end|top"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/filter" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:text="Bakery Finder"
-            android:textColor="#000000"
-            android:textSize="32dp"
-            android:textStyle="bold"
             android:shadowColor="#FFFFFF"
             android:shadowDx="1"
             android:shadowDy="1"
-            android:shadowRadius="12" />
+            android:shadowRadius="12"
+            android:text="Find Recipes"
+            android:textColor="#000000"
+            android:textSize="32dp"
+            android:textStyle="bold" />
 
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewOutlets"
+        android:id="@+id/recyclerViewRecipes"
         android:layout_width="match_parent"
-        android:layout_height="653dp"
-        android:layout_above="@+id/bottomNavigation"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/frame"
-        android:layout_marginBottom="-72dp"
+        android:layout_above="@+id/bottomNavigation"
+        android:layout_marginTop="16dp"
         android:divider="?android:attr/dividerHorizontal"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="1dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2" />
 
-    <!-- FloatingActionButton for adding outlets -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddOutlet"
         android:layout_width="wrap_content"
@@ -51,7 +63,6 @@
         android:src="@drawable/ic_add"
         android:backgroundTint="#FF4081" />
 
-    <!-- Include the bottom navigation bar -->
     <include
         android:id="@+id/bottomNavigation"
         layout="@layout/bottom_navigation"
