--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/home_bg"
-        android:scaleType="centerCrop" />
+    android:layout_height="match_parent"
+    android:background="#FAEED1">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -15,46 +10,57 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
-        android:text="Bakery Finder"
+        android:text="CookedIn"
         android:textColor="#780202"
         android:textSize="36sp"
         android:textStyle="bold"
         android:shadowColor="#FFFFFF"
         android:shadowDx="1"
         android:shadowDy="1"
-        android:shadowRadius="12"/>
+        android:shadowRadius="12" />
 
     <Button
-        android:id="@+id/findOutletsButton"
+        android:id="@+id/findRecipesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find Outlets"
+        android:text="Find Recipes"
         android:layout_below="@id/titleTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:backgroundTint="#4CAF50"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/aboutUsButton"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About Us"
-        android:layout_below="@id/findOutletsButton"
+        android:text="Login"
+        android:layout_below="@id/findRecipesButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="#2196F3"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/exitButton"
+        android:id="@+id/cookingTimerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Exit"
-        android:layout_below="@id/aboutUsButton"
+        android:text="Cooking Timer"
+        android:layout_below="@id/loginButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="#FF4081"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/helpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Help"
+        android:layout_below="@id/cookingTimerButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#2196F3"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
