Fixed AstraHelper GetAll, SQLHelper. Added Expanded Recipe View, Upvote/Downvote

--- a/app/src/main/res/layout/filter_recipes.xml
+++ b/app/src/main/res/layout/filter_recipes.xml
@@ -1,136 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <!-- Type Section -->
+    <TextView
+        android:id="@+id/typeLabel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:text="Type" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/typeRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioMain"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="type" />
+            android:text="Main Course" />
 
-        <GridLayout
-            android:id="@+id/typeGridLayout"
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioSide"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/typeLabel"
-            android:layout_marginTop="0dp"
-            android:columnCount="2"
+            android:text="Side Dish" />
 
-            android:columnOrderPreserved="false">
-
-            <RadioButton
-                android:id="@+id/radioMain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Main Course" />
-
-            <RadioButton
-                android:id="@+id/radioSide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Side Dish" />
-
-            <RadioButton
-                android:id="@+id/radioSnacks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Snack" />
-
-            <RadioButton
-                android:id="@+id/radioDesserts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Dessert" />
-
-            <RadioButton
-                android:id="@+id/radioDrinks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Drink" />
-
-            <RadioButton
-                android:id="@+id/radioOther"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Other" />
-        </GridLayout>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioSnacks"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Calories:" />
+            android:text="Snack" />
 
-        <EditText
-            android:id="@+id/editTextText2"
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioDesserts"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="kcal"
-            android:inputType="text" />
+            android:text="Dessert" />
 
-        <androidx.gridlayout.widget.GridLayout
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioDrinks"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:columnCount="2">
+            android:text="Drink" />
 
-            <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="less than" />
-
-            <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="more than" />
-        </androidx.gridlayout.widget.GridLayout>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioOther"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Preparationtime" />
+            android:text="Other" />
+    </RadioGroup>
 
-        <EditText
-            android:id="@+id/editTextText2"
-            android:layout_width="match_parent"
+    <!-- Calories Section -->
+    <TextView
+        android:id="@+id/caloriesLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calories:" />
+
+    <EditText
+        android:id="@+id/caloriesEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="kcal"
+        android:inputType="number" />
+
+    <!-- Comparison Section for Calories -->
+    <RadioGroup
+        android:id="@+id/caloriesComparisonRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioLessThan"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="minutes"
-            android:inputType="text" />
+            android:text="less than" />
 
-        <androidx.gridlayout.widget.GridLayout
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radioMoreThan"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:columnCount="2">
+            android:text="more than" />
+    </RadioGroup>
 
-            <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="less than" />
+    <!-- Preparation Time Section -->
+    <TextView
+        android:id="@+id/prepTimeLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Preparation Time" />
 
-            <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="more than" />
-        </androidx.gridlayout.widget.GridLayout>
+    <EditText
+        android:id="@+id/prepTimeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="minutes"
+        android:inputType="number" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
+    <!-- Comparison Section for Preparation Time -->
+    <RadioGroup
+        android:id="@+id/prepTimeComparisonRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioPrepTimeLessThan"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save filters" />
+            android:text="less than" />
 
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RadioButton
+            android:id="@+id/radioPrepTimeMoreThan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="more than" />
+    </RadioGroup>
+
+    <!-- Save Filters Button -->
+    <Button
+        android:id="@+id/saveFiltersButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save Filters" />
+</LinearLayout>
