--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -10,32 +10,28 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="81dp"
             android:layout_gravity="center"
             android:background="#607274" />
 
-        <ImageView
-            android:id="@+id/btnFilter"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="end|top"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:src="@drawable/filter" />
-
         <!-- Your existing header layout -->
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="81dp"
-            android:background="#607274" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/filterBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="right"
+            android:layout_margin="12dp"
+            android:backgroundTint="#8BFFFFFF"
+            android:src="@drawable/filterbtn" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:shadowColor="#FFFFFF"
             android:shadowDx="1"
             android:shadowDy="1"
