--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -23,10 +23,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About"
+            android:text="Help"
+            android:textColor="#000000"
             android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
